src/objects/SNI_FL_Members_ROI__c.object
<CustomObject>
    <description>Release of information - visibility of data to family link</description>
    <fields>
        <fullName>Authorized_Member__c</fullName>
        <formula>SNI_FL_ROI_Signed_With__r.SNI_FL_Member__r.FirstName + &quot;  &quot; +SNI_FL_ROI_Signed_With__r.SNI_FL_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exp_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Members ROIs</relationshipLabel>
        <relationshipName>Members_ROIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SNI_FL_EXPIRATION_DATE__c</fullName>
        <formula>IF(
  AND(
    MONTH( SNI_FL_ROI_Signed_Date__c ) = 2,
    DAY( SNI_FL_ROI_Signed_Date__c ) = 29,
    NOT(
      OR(
        MOD( YEAR( SNI_FL_ROI_Signed_Date__c ), 400 ) = 0,
        AND(
          MOD( YEAR( SNI_FL_ROI_Signed_Date__c ), 4 ) = 0,
          MOD( YEAR( SNI_FL_ROI_Signed_Date__c ), 100 ) != 0
        )
      )
    )
  ),
  DATE( YEAR( SNI_FL_ROI_Signed_Date__c ) + 1, 3, 1),
  DATE( YEAR( SNI_FL_ROI_Signed_Date__c ) + 1, MONTH( SNI_FL_ROI_Signed_Date__c ), DAY( SNI_FL_ROI_Signed_Date__c ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
    <fullName>Is_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Revoked?</label>
    <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Id</label>
        <referenceTo>SNI_FL_Care_Team_Member__c</referenceTo>
        <relationshipLabel>Members ROIs</relationshipLabel>
        <relationshipName>Members_ROIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SNI_FL_ROI_Signed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ROI Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNI_FL_ROI_Signed_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Member</label>
        <referenceTo>SNI_FL_Care_Team_Member__c</referenceTo>
        <relationshipLabel>Members ROIs (ROI Signed With)</relationshipLabel>
        <relationshipName>Members_ROIs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Signed_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Signed Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SNI_FL_Type__c</fullName>
        <label>Authorized Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electronically</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Unable to Sign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SNI_FL_UNABLED_TO_SIGN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unable To Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( ISPICKVAL(SNI_FL_Status__c, &apos;Active&apos;),  IMAGE(&apos;/resource/1601899971000/SNI_FL_ActiveIcon?&apos;, &apos;Active&apos; , 25, 25) , IF( ISPICKVAL(SNI_FL_Status__c, &apos;Inactive&apos;), IMAGE(&apos;/resource/1601900898000/SNI_FL_InActiveIcon?&apos;, &apos;Inactive&apos; , 25, 25), IMAGE(&apos;/resource/1602151286000/SNI_FL_PendingIcon?&apos;,&apos;Pending&apos; , 25, 25)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Members ROI</label>
    <nameField>
        <displayFormat>ROI-{0000}</displayFormat>
        <label>Members ROI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members ROIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>